# test_marker

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  library.cpp  vcpkg.json
.github/workflows/: build_and_test.yml  create_release.yml
cmake/: compiler_warnings.cmake  trick-config.cmake  trick_test_checkpoint-config.cmake
demo/: CMakeLists.txt  foo.cpp  foo.test.cpp
include/trick/test_checkpoint/: checkpoint.hpp  configuration.hpp
src/: CMakeLists.txt  checkpoint.cpp  checkpoint.test.cpp  test_marker.cpp  test_marker.h
src/flag/: is_new_file.hpp
src/ut/: CMakeLists.txt  test_marker.test.cpp
src/utility/: CMakeLists.txt  test_data.hpp  utility.cpp  utility.hpp  utility.test.cpp
